# trinnov-altitude-homeassistant

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  SYNC_NOTES.md  hacs.json  pyproject.toml  pytest.ini  release-please-config.json  renovate.json  requirements_test.txt
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  release-please.yaml  release.yml  tests.yml  validate.yml
custom_components/trinnov_altitude/: __init__.py  binary_sensor.py  button.py  commands.py  config_flow.py  const.py  coordinator.py  entity.py  icons.json  lifecycle.py  manifest.json  media_player.py  models.py  number.py  remote.py  resolvers.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  volume.py
custom_components/trinnov_altitude/translations/: en.json
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_button.py  test_commands.py  test_config_flow.py  test_coordinator.py  test_entity.py  test_init.py  test_media_player.py  test_number.py  test_remote.py  test_resolvers.py  test_select.py  test_sensor.py  test_services.py  test_switch.py
